templates use same look and style

--- a/templates/archive-sermon.html
+++ b/templates/archive-sermon.html
@@ -2,7 +2,7 @@
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"20vh"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group" style="margin-top:20vh">
-    <!-- wp:query-title {"type":"archive"} /-->
+    <!-- wp:query-title {"type":"archive", "textAlign":"center"} /-->
     <!-- wp:term-description /-->
 
     <!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"sermon","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"layout":{"type":"constrained"}} -->
@@ -19,7 +19,8 @@
                 <!-- wp:post-content /-->
             </div>
             <!-- /wp:group -->
-            [series_featured_image]
+            
+            <!-- wp:template-part {"slug":"series-image","theme":"kcg-wp-theme"} /-->
         </div>
         <!-- /wp:group -->
         <!-- /wp:post-template -->
