--- a/style.css
+++ b/style.css
@@ -92,10 +92,10 @@ a:where(:not(.wp-element-button)):hover {
 .kcg-card {
   box-sizing: border-box;
   background-color: white;
-  border: 1px solid var(--wp--preset--color--light);
+  border: 1px solid var(--wp--preset--color--base);
   border-radius: 1rem;
   padding: 0.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
   display: flex;
   align-items: center;
   transition: all 0.3s;
