--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /*
 Theme Name: King's Church Guildford
-Theme URI: 
+Theme URI: https://github.com/samsarj/kcg-wp-theme
+GitHub Theme URI: https://github.com/samsarj/kcg-wp-theme
+Primary Branch: main
 Author: Sam Sarjudeen
-Author URI: 
+Author URI: https://github.com/samsarj
 Description: WordPress theme for King's Church Guildford.
 Requires at least: 6.8
 Tested up to: 6.8
@@ -10,7 +12,7 @@ Requires PHP: 5.7
 Version: 2.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: kcg-theme
+Text Domain: kcg-wp-theme
 Tags: 
 */
 
@@ -47,7 +49,7 @@ a {
 }
 
 a:hover {
-  transform: scale(1.04);
+  transform: scale(1.02);
   filter: brightness(1.2);
 }
 
@@ -57,6 +59,7 @@ a:active {
 }
 
 a:where(:not(.wp-element-button)) {
+  color: inherit;
   text-underline-offset: 0.2rem;
   transition: all 0.3s;
 }
@@ -87,15 +90,13 @@ a:where(:not(.wp-element-button)):hover {
   }
 }
 
-
-
 .kcg-card {
   box-sizing: border-box;
   background-color: white;
   border: 1px solid var(--wp--preset--color--base);
   border-radius: 1rem;
   padding: 0.5rem;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   transition: all 0.3s;
