prettified and unified templates into theme.json

--- a/assets/css/divider.css
+++ b/assets/css/divider.css
@@ -24,9 +24,12 @@
 }
 
 @keyframes dividerPriMove {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(20px);
   }
@@ -37,9 +40,12 @@
 }
 
 @keyframes dividerLightMove {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(30px);
   }
