--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 <main class="content-padding">
     <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
     <div class="wp-block-group">
@@ -25,4 +25,4 @@
     </div>
 </main>
 <!-- /wp:group -->
-<!-- wp:template-part {"slug":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
