--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- wp:template-part {"slug":"header","theme":"kcg-wp-theme"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
 <!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"20vh"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group" style="margin-top:20vh">
@@ -8,4 +8,4 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"kcg-wp-theme"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
