--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -1,10 +1,21 @@
 <!-- wp:template-part {"slug":"header","tagName":"header"} /-->
 
-<svg class="divider" viewBox="0 0 100 100" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
-  <polygon class="divider-light" points="100,90 0,40 0,200 100,200" fill="red" />
-  <polygon class="divider-primary" points="0,80 100,25 100,200 0,200" fill="green" />
-  <polygon class="divider-secondary" points="0,100 100,45 100,200 0,200" fill="blue" />
-</svg>
+<div class="divider-wrapper">
+  <svg class="divider layer-light" viewBox="0 0 1000 1000" preserveAspectRatio="none">
+    <polygon points="1000,900 0,400 0,2000 1000,2000" />
+  </svg>
+
+  <svg class="divider layer-primary" viewBox="0 0 1000 1000" preserveAspectRatio="none">
+    <polygon points="0,800 1000,250 1000,2000 0,2000" />
+  </svg>
+
+  <svg class="divider layer-secondary" viewBox="0 0 1000 1000" preserveAspectRatio="none">
+    <polygon points="0,1000 1000,450 1000,2000 0,2000" />
+  </svg>
+</div>
+
+
+
 
 <!-- wp:post-content /-->
  
