--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Description: WordPress theme for King's Church Guildford.
 Requires at least: 6.8
 Tested up to: 6.8
 Requires PHP: 5.7
-Version: 2.1.1
+Version: 2.1.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kcg-wp-theme
@@ -106,4 +106,7 @@ a:where(:not(.wp-element-button)):hover {
   min-height: 100vh;
   min-height: 100svh;
   min-height: 100dvh;
+  height: 100vh;
+  height: 100svh;
+  height: 100dvh;
 }
