added padding to full-height class

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Description: WordPress theme for King's Church Guildford.
 Requires at least: 6.8
 Tested up to: 6.8
 Requires PHP: 5.7
-Version: 2.2.0
+Version: 2.2.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kcg-wp-theme
@@ -105,6 +105,5 @@ a:where(:not(.wp-element-button)):hover {
 .full-height {
   min-height: 100vh;
   min-height: 100svh;
-  height: 100vh;
-  height: 100svh;
+  padding-top: 20vh;
 }
