added contact form styling

--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ Primary Branch: main
 Author: Sam Sarjudeen
 Author URI: https://github.com/samsarj
 Description: WordPress theme for King's Church Guildford.
-Requires at least: 6.8
-Tested up to: 6.8
+Requires at least: 6.9
+Tested up to: 6.9
 Requires PHP: 5.7
-Version: 2.3.0
+Version: 2.4.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: kcg-wp-theme
@@ -106,4 +106,8 @@ a:where(:not(.wp-element-button)):hover {
   min-height: 100vh;
   min-height: 100svh;
   padding-top: 20vh;
+}
+
+.wpcf7 h5 {
+  margin: 0;
 }
